# smllvm

./: .gitignore  CMakeLists.txt  README.md  hello.sa
src/: ast.c  ast.h  lexer.c  lexer.h  llvm_gen.c  llvm_gen.h  parser.c  parser.h  sml.c  stdlib.c  stdlib.h  token.c  token.h  type.h  type_check.c  type_check.h  utils.c  utils.h
